--- a/Intro_To_Linux_Course_Outline.lyx
+++ b/Intro_To_Linux_Course_Outline.lyx
@@ -1,7 +1,9 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
-\lyxformat 474
+#LyX 2.2 created this file. For more info see http://www.lyx.org/
+\lyxformat 508
 \begin_document
 \begin_header
+\save_transient_properties true
+\origin unavailable
 \textclass article
 \use_default_options true
 \maintain_unincluded_children false
@@ -9,16 +11,16 @@
 \language_package default
 \inputencoding auto
 \fontencoding global
-\font_roman default
-\font_sans default
-\font_typewriter default
-\font_math auto
+\font_roman "default" "default"
+\font_sans "default" "default"
+\font_typewriter "default" "default"
+\font_math "auto" "auto"
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100
-\font_tt_scale 100
+\font_sf_scale 100 100
+\font_tt_scale 100 100
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -105,7 +107,7 @@ Target Students
 \end_layout
 
 \begin_layout Standard
-1st year students who want to do a complete 3 year COMS major aswell as
+1st year students who want to do a complete 3 year COMS major as well as
  anyone interested in getting started with linux.
  
 \end_layout
@@ -124,9 +126,9 @@ Course Goal
 \end_layout
 
 \begin_layout Standard
-To help COMS students familliarize themselves with linux - which in turn
+To help COMS students familiarize themselves with Linux - which in turn
  will help them in there studies.
- Also to spread the love of linux around and in turn make the world a slightly
+ Also to spread the love of Linux around and in turn make the world a slightly
  better place.
 \end_layout
 
@@ -155,13 +157,13 @@ Introduction + general tip
 \end_layout
 
 \begin_layout Subsection
-Section Summery
+Section Summary
 \end_layout
 
 \begin_layout Standard
 In this section students will be told what will be taught in this course
  and be given general tips to keep in mind that will help them in there
- learning, in this course aswell as in any other course.
+ learning, in this course as well as in any other course.
 \end_layout
 
 \begin_layout Subsection
@@ -227,7 +229,7 @@ Formatting Linux - virtualbox vs.
 \end_layout
 
 \begin_layout Enumerate
-Things will break - alot - dont be scared to experiment!
+Things will break - a lot - don't be scared to experiment!
 \end_layout
 
 \begin_layout Section
@@ -235,12 +237,12 @@ What is Linux - basic history and theory
 \end_layout
 
 \begin_layout Subsection
-Section Summery
+Section Summary
 \end_layout
 
 \begin_layout Standard
-In this section we will cover the basics of the origin of linux and some
- other linux basics such as what distros are.
+In this section we will cover the basics of the origin of Linux and some
+ other Linux basics such as what distros are.
 \end_layout
 
 \begin_layout Subsection
@@ -248,7 +250,7 @@ Goal
 \end_layout
 
 \begin_layout Standard
-By the end of this section students should be familliar with the term GNU
+By the end of this section students should be familiar with the term GNU
 \backslash
 Linux, and the ideas of distros, desktop environments, software managers
  and file systems, aswell as being familliar with some of the most popular
@@ -293,7 +295,8 @@ Points for lessons
 \end_layout
 
 \begin_layout Enumerate
-What is GNU vs what is Linux, Richard Stalman and Linus Torvalds
+What is GNU vs what is Linux, Richard Stalman and Linus Torvalds - a bit
+ of history
 \end_layout
 
 \begin_layout Enumerate
@@ -305,7 +308,7 @@ what is GUI what are desktop environments
 \end_layout
 
 \begin_layout Enumerate
-The idea of a filesystem
+The idea of a file-system
 \end_layout
 
 \begin_layout Enumerate
@@ -317,7 +320,7 @@ What is the Linux terminal and what is bash
 \end_layout
 
 \begin_layout Enumerate
-GPL and opensource
+GPL and open source
 \end_layout
 
 \begin_layout Section
@@ -325,11 +328,11 @@ Basic commands
 \end_layout
 
 \begin_layout Subsection
-Section Summery
+Section Summary
 \end_layout
 
 \begin_layout Standard
-In this section students will be introduced to the most basic linux commands
+In this section students will be introduced to the most basic Linux commands
  and will start experimenting with bash for the first time 
 \end_layout
 
@@ -338,7 +341,7 @@ Goal
 \end_layout
 
 \begin_layout Standard
-By the end of this section students should be able to navigate the filesystem
+By the end of this section students should be able to navigate the file-system
  through the terminal and make, move and copy files.
 \end_layout
 
@@ -420,7 +423,7 @@ Processes
 \end_layout
 
 \begin_layout Subsection
-Section Summery
+Section Summary
 \end_layout
 
 \begin_layout Standard
@@ -484,7 +487,7 @@ fg
 \end_layout
 
 \begin_layout Section
-The Linux file system
+The Linux file-system
 \end_layout
 
 \begin_layout Subsection
@@ -492,9 +495,9 @@ Section Summary
 \end_layout
 
 \begin_layout Standard
-In this section students will be introduced to the linux filesystem, aswell
- as each directory in root and its perpose, and be given examples of different
- files located in the different directories.
+In this section students will be introduced to the Linux file-system, as
+ well as each directory in root and its purpose, and be given examples of
+ different files located in the different directories.
  
 \end_layout
 
@@ -651,7 +654,7 @@ Section Summary
 \end_layout
 
 \begin_layout Standard
-In this section students will be introduced to some more useful linux commands.
+In this section students will be introduced to some more useful Linux commands.
 \end_layout
 
 \begin_layout Subsection
@@ -660,7 +663,7 @@ Goal
 
 \begin_layout Standard
 By the end of this section students should have some more tools to get around
- linux and be able to do most of what is required when running linux as
+ Linux and be able to do most of what is required when running Linux as
  a primary OS.
 \end_layout
 
@@ -715,8 +718,8 @@ Section Summary
 \end_layout
 
 \begin_layout Standard
-In this section students will be introduced to the concept of piplines and
- the useful combination with grep
+In this section students will be introduced to the concept of pipelines
+ and the useful combination with grep
 \end_layout
 
 \begin_layout Subsection
@@ -798,7 +801,7 @@ Goal
 \end_layout
 
 \begin_layout Standard
-By the end of this section students should feel comfertable creating or
+By the end of this section students should feel comfortable creating or
  modifying a text file and editing it.
 \end_layout
 
@@ -815,8 +818,8 @@ Tasks
 \end_layout
 
 \begin_layout Standard
-Students will create a text file and edit it, trying out the different capabliti
-es of vim
+Students will create a text file and edit it, trying out the different capabilit
+ies of vim
 \end_layout
 
 \begin_layout Standard
@@ -898,7 +901,7 @@ Goal
 \end_layout
 
 \begin_layout Standard
-By the end of this section students should be aquanted with some system
+By the end of this section students should be acquainted with some system
  files and feel comfortable editing them.
 \end_layout
 
@@ -944,7 +947,7 @@ Points for lessons
 \end_layout
 
 \begin_layout Enumerate
-ifcfg + vim /etc/NetworkManager/system-connections/
+ifcfg + /etc/NetworkManager/system-connections/
 \end_layout
 
 \begin_layout Enumerate
@@ -972,7 +975,7 @@ Section Summary
 \end_layout
 
 \begin_layout Standard
-In this section students will get aquanted with the term of mounting 
+In this section students will get acquainted with the term of mounting 
 \end_layout
 
 \begin_layout Subsection
@@ -1010,7 +1013,7 @@ Points for lessons
 \end_layout
 
 \begin_layout Enumerate
-Explain the consept of mounting
+Explain the concept of mounting
 \end_layout
 
 \begin_layout Enumerate
@@ -1043,7 +1046,7 @@ Section Summary
 
 \begin_layout Standard
 In this section students will learn how to enter a remote computer via terminal,
- aswell as copy files off of a remote computer.
+ as well as copy files off of a remote computer.
 \end_layout
 
 \begin_layout Subsection
@@ -1067,7 +1070,7 @@ Tasks
 \end_layout
 
 \begin_layout Standard
-Students will take turns and ssh to there neighbers computer and create
+Students will take turns and ssh to there neighbors computer and create
  a file on the desktop while there neighbor sees the file being created.
  they will then copy that file to there own desktop using rcp and see it
  being created.
@@ -1191,7 +1194,7 @@ Bash scripts
 \end_layout
 
 \begin_layout Subsection
-Section Summery
+Section Summary
 \end_layout
 
 \begin_layout Standard
@@ -1249,7 +1252,7 @@ Git and Github
 \end_layout
 
 \begin_layout Subsection
-Section Summery
+Section Summary
 \end_layout
 
 \begin_layout Standard
@@ -1282,7 +1285,7 @@ Tasks
 Students will create a github account, create a repository, initialize a
  local copy of the repository, add a file, add, commit and push to the repositor
 y.
- They will then go online and see the file appear in the gui interface.
+ They will then go online and see the file appear in the GUI interface.
 \end_layout
 
 \begin_layout Subsection
@@ -1322,12 +1325,12 @@ Even More Linux Commands
 \end_layout
 
 \begin_layout Subsection
-Section Summery
+Section Summary
 \end_layout
 
 \begin_layout Standard
 In this section students will be introduced to linux commands that are good
- to know, but not necessary for daily linux use.
+ to know, but not necessary for daily Linux use.
 \end_layout
 
 \begin_layout Subsection
@@ -1335,8 +1338,8 @@ Goal
 \end_layout
 
 \begin_layout Standard
-By the end of this section students should be comfertable trying out different
- linux commands and googling for them.
+By the end of this section students should be comfortable trying out different
+ Linux commands and duckduckgo/googling for them.
 \end_layout
 
 \begin_layout Subsection
@@ -1352,7 +1355,7 @@ Tasks
 \end_layout
 
 \begin_layout Standard
-Students will try out the different linux commands mentioned and try to
+Students will try out the different Linux commands mentioned and try to
  see which hardware pieces they can see using 'lspci' and how much memory
  is left on /home using 'df' 
 \end_layout
@@ -1394,11 +1397,11 @@ More Advanced Linux Theory
 \end_layout
 
 \begin_layout Subsection
-Section Summery
+Section Summary
 \end_layout
 
 \begin_layout Standard
-In this section students will be introduced to some more in depth linux
+In this section students will be introduced to some more in depth Linux
  terms.
 \end_layout
 
@@ -1407,7 +1410,7 @@ Goal
 \end_layout
 
 \begin_layout Standard
-By the end of this section should be able to watch a 'linux sucks' presentation
+By the end of this section should be able to watch a Linux sucks' presentation
  and understand and laugh about most of it.
 \end_layout
 
@@ -1437,10 +1440,6 @@ install from source
 
 \begin_layout Enumerate
 systemd
-\end_layout
-
-\begin_layout Enumerate
-mir
 \end_layout
 
 \begin_layout Enumerate
